# ip3-ec-fan-rpm

./: .gitignore  LICENSE  README.md  go.mod  pyproject.toml
cmd/ip3-ec-fan-rpm/: main.go  main_test.go
docs/: acpi-ec-register-map.md  hwmon-driver-contract.md  kernel-hwmon-driver-plan.md
examples/: sample-generic.json  sample-generic.prom
src/ip3_ec_fan_rpm/: cli.py
tools/: collect-hwmon-driver-evidence.sh
